<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包名（必须和功能包目录名一致：my_class_pkg） -->
  <name>my_class_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 publisher/node/action example for wx_ros_class_ws</description>
  <!-- 维护者信息（可替换为你的邮箱） -->
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译工具依赖（ROS 2 必须） -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- 新增：自定义消息/Action生成的核心依赖（必须） -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- C++ 运行时依赖（保留原有） -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  
  <!-- ========== 新增：Python 运行时依赖（关键） ========== -->
  <depend>rclpy</depend>          <!-- Python ROS 2 核心库 -->
  <exec_depend>rclpy_action</exec_depend>  <!-- Python Action 核心库 -->
  
  <!-- 通用运行时依赖（保留原有） -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- 关键：声明为消息/Action接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- 测试依赖（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 导出构建类型（必须） -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

